--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   .hero {
   width: 100%;
   height: 90vh;
-  background: url("banner.jpg") no-repeat center center;
+  background: url("BANNER.jpg") no-repeat center center;
   background-size: cover;
   display: flex;
   align-items: center;
